# Kalman-mower-cpp

./: .gitignore  CMakeLists.txt  README.md  run.sh
data/: ekf_output.csv  output.csv  ukf_output.csv
scripts/: plot.py
src/: data_generator.cpp  data_generator.h  ekf.cpp  ekf.h  main.cpp  ukf.cpp  ukf.h
